apps/server-place/deployment/k8s/server-place.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: api.knighthell.dev
      http:
        paths:
          - path: /places
            pathType: Prefix
            backend:
              service:
                name: server-place-prod
                port:
                  name: http
                  number: 8080
